--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,3 @@
 REACT_APP_MOVIE_DB_API=https://api.themoviedb.org/3
+REACT_APP_API_KEY= here you need to write your api key
 REACT_APP_IMAGE_BASE_PATH=https://image.tmdb.org/t/p
